--- a/les_2/index.html
+++ b/les_2/index.html
@@ -28,6 +28,11 @@
          поэтому я стал более безжалостным и использовал это как оружие, 
          пытаясь следовать своим идеалам. — Кирицугу Эмия (Судьба/ночь схватки)
     </p>  
+    <p class="paragraph-4">«В молодости я был безрассудным.
+         Я вырос, проклиная бессердечность мира. Мир был жесток,
+         поэтому я стал более безжалостным и использовал это как оружие, 
+         пытаясь следовать своим идеалам. — Кирицугу Эмия (Судьба/ночь схватки)
+    </p>  
     <div>
         <span>В молодости я был безрассудным.</spam>
         <span>В молодости я был безрассудным.</spam>
