--- a/modl_4/les_3/page1.html
+++ b/modl_4/les_3/page1.html
@@ -27,12 +27,14 @@
       <label class="form-label" for="field3">Пароль</label>
       <input type="password" class="form-control" id="field3">
     </div>
-  
-    <input type="button" class="btn btn-success" value="Отправить форму">
-    
+
     <div class="mb-3">
       <label class="form-label">Большое текстовое поле</label>
-      <textarea name="" cols="50" rows="10"></textarea></div>
+      <textarea name="" cols="50" rows="5" class="form-control"></textarea>
+    </div>
+  
+    <input type="button" class="btn btn-success" value="Отправить форму">
+
   </form>
 </body>
 </html>
